// {C} Copyright 2020 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package cluster;

import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";

message Credentials {
    option (venice.objectPrefix) = {Collection: "credentials"};
    api.TypeMeta T           = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta O         = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    //CredentialsSpec contains the credential information needed to access a service
    CredentialsSpec Spec     = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    CredentialsStatus Status = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}

message CredentialsSpec {
    //KeyValuePairs contains all key,value pairs that constitute credentials to access a service
    repeated KeyValue KeyValuePairs = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "key-value-pairs,omitempty"];
}

message KeyValue {
    string Key  = 1 [(gogoproto.jsontag) = "key,omitempty"];
    bytes Value = 2 [(venice.storageTransformer) = "Secret()", (gogoproto.jsontag) = "value,omitempty"];
}

message CredentialsStatus {
    // empty status, not needed for Credentials object
}